--- a/LuaFuck.html
+++ b/LuaFuck.html
@@ -1,8 +1,8 @@
 
 <html>
 <head>
-  <title>LuaFuck - aaaaaaaaaaaaaa</title>
-  <meta name="description" content="lua fuck fucks lua and also i stole the website from jsfuck lol.">
+  <title>LuaFuck - funny haha</title>
+  <meta name="description" content="LuaFuck made by seizure salad#3820 and nickk#0104">
   <meta charset="utf-8" />
   <meta property="og:image" content="http://www.jsfuck.com/preview.png" />
   <meta name="viewport" content="width=device-width" />
@@ -76,6 +76,8 @@
   <h2>....<br>_#{}</h2>
 
   <p>LuaFuck hurts my small ass brain lua does the funny yes</p>
+  
+  <p>Created by seizure salad#3820 and nickk#0104</p>
 
   <p>Im 99% sure this can easily be decoded but idc.</p>
   
