--- a/LuaFuck.html
+++ b/LuaFuck.html
@@ -78,10 +78,8 @@
   <p>LuaFuck hurts my small ass brain lua does the funny yes</p>
   
   <p>Created by seizure salad#3820 and nickk#0104</p>
-
-  <p>Im 99% sure this can easily be decoded but idc.</p>
   
-  <p><b>this isn't a lua obfuscator, just like how JSFuck isn't a javascript obfusactor</b></p>
+  <p><b>this isn't a lua obfuscator, just like how JSFuck isn't a javascript obfuscator</b></p>
 
   <p>Use the form below to convert your own script.</p>
   
