--- a/sxlib/other.html
+++ b/sxlib/other.html
@@ -190,7 +190,7 @@ SxOffscreen.Attach();
 
 async void AttachEventHandler(SxLibBase.SynAttachEvents AttachEvent, object Param)
 {
-    switch (LoadEvent)
+    switch (AttachEvent)
     {
         case SxLibBase.SynAttachEvents.FAILED_TO_FIND:
             //Failed to find Roblox
