--- a/sxlib/index.html
+++ b/sxlib/index.html
@@ -10,8 +10,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
         <meta property="og:title" content="SxLib Documentation" />
-        <meta property="og:description" content="Documentation for making Synapse X custom UIs with SxLib" />
+        <meta property="og:description" content="Documentation for making Synapse X custom UIs with SxLib. Made by seizure salad#3820." />
         <link type="application/json+oembed" href="https://embed.rauf.workers.dev/oembed.json" />
+        <meta name="twitter:card" content="summary_large_image">
 
         <link rel="icon" href="favicon.svg">
         <link rel="shortcut icon" href="favicon.png">
