--- a/pwa/index.html
+++ b/pwa/index.html
@@ -63,7 +63,7 @@
             }
             if(!window.matchMedia('(display-mode: standalone)').matches){
                 document.getElementsByTagName('h1')[0].remove();
-                document.getElementsByTagName('button')[0].remove();
+                document.getElementsByTagName('input')[0].remove();
                 
                 let messag = document.createElement('h1');
                 messag.innerHTML = "HELLO PRESS SHARE AND ADD TO YOUR HOME SCREEN PLS THANKS OR ELSE THEN IT NOT TRUE APP!!!!!!!!!!!!!";
