--- a/pwa/peeminder/index.html
+++ b/pwa/peeminder/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>PISS</title>
         <meta charset="UTF-8">
-        <link rel="manifest" href="/manifest.webmanifest">
+        <link rel="manifest" href="maifest.webmanifest">
         <link rel="stylesheet" href="main.css">
 
         <link rel="apple-touch-icon" href="peeminder/icons/apple-icon-180.png">
