--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>seizure salad</title>
+        <script src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="890436" data-siteid="333580" async data-cfasync="false"></script>
     </head>
     <body>
         <p>aaaaaa</p>
