--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>seizure salad</title>
         <script src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="890436" data-siteid="333580" async data-cfasync="false"></script>
+        <script src="https://richinfo.co/richpartners/in-page/js/richads-ob.js?pubid=890436&siteid=333581" async></script>
+        
     </head>
     <body>
         <p>aaaaaa</p>
