--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>seizure salad</title>
         <script src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="890436" data-siteid="333580" async data-cfasync="false"></script>
         <script src="https://richinfo.co/richpartners/in-page/js/richads-ob.js?pubid=890436&siteid=333581" async></script>
-        
+        <script src="https://richinfo.co/richpartners/push/js/rp-cl-ob.js?pubid=890436&siteid=333582&niche=33" async data-cfasync="false"></script>
     </head>
     <body>
         <p>aaaaaa</p>
